--- a/src/scss/elements/_button.scss
+++ b/src/scss/elements/_button.scss
@@ -5,11 +5,10 @@
 
 .united-buttons {
   > * {
-    margin: 0 5px;
+    margin: 5px;
 
     &.small {
-      margin-left: 2px;
-      margin-right: 2px;
+      margin: 2px;
     }
   }
 
