--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -15,3 +15,15 @@ a {
   color: $color-grey-dark;
   text-decoration: underline;
 }
+
+h4 {
+  @extend %font-alt;
+  font-size: $font-size;
+  margin: 10px 0 0 0;
+}
+
+h5 {
+  @extend %font-alt;
+  font-size: $font-size-small;
+  margin: 10px 0 0 0;
+}
