add basic messages style + form style + docs

--- a/src/scss/_config.scss
+++ b/src/scss/_config.scss
@@ -23,6 +23,7 @@ $color-grey-light:        #E2E2E2;
 $color-grey-light2:       #FAFAFA;
 $color-grey-dark:         #7F7F7F;
 $color-grey-dark2:        #4A4A4A;
+$color-gold:              #FBB349;
 
 /**
  * Layout config.
