--- a/src/scss/elements/_button.scss
+++ b/src/scss/elements/_button.scss
@@ -10,6 +10,14 @@
     &.small {
       margin: 2px;
     }
+
+    &:first-child {
+      margin-left: 0;
+    }
+
+    &:last-child {
+      margin-right: 0;
+    }
   }
 
   &.centered {
