--- a/src/scss/base/_rainbow.scss
+++ b/src/scss/base/_rainbow.scss
@@ -9,6 +9,7 @@ pre {
     word-wrap: break-word;
     border-width: 2px;
     font-size: $font-size-small;
+    margin-top: 0;
 }
 
 pre, code {
@@ -30,7 +31,7 @@ pre .storage {
 }
 
 pre .string {
-    color: $color-grey-dark;
+    color: darken($color-negative, 20%);
 }
 
 pre .keyword, pre .selector {
