remove ionicons + jquery (we use CDN at the moment) finish basic elements docs.

--- a/src/scss/_config.scss
+++ b/src/scss/_config.scss
@@ -8,6 +8,7 @@ $font-family-alt:         'Arial Narrow', 'Arial', sans-serif;
 $font-size-base:          62.5%;
 $font-size:               1.4rem;
 $font-size-small:         1.2rem;
+$font-size-mini:          1.0rem;
 $font-size-big:           1.6rem;
 $line-height:             150%;
 $line-height-big:         220%;
