--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -16,7 +16,7 @@ p {
 }
 
 a {
-  color: $color-grey-dark;
+  color: $color-grey-dark2;
   text-decoration: underline;
 }
 
@@ -29,6 +29,12 @@ h4 {
 h5 {
   @extend %font-alt;
   font-size: $font-size-small;
+  margin: 10px 0 0 0;
+}
+
+h6 {
+  @extend %font-alt;
+  font-size: $font-size-mini;
   margin: 10px 0 0 0;
 }
 
