- Add a %fixed definition and included it into tabbar and sidebar. - Add .responstive-padding option to united-container - Refactor sidebar to work with %fixed definition - Include missing input type password + remove border-radios on iOS webkit.

--- a/src/scss/definitions/_button.scss
+++ b/src/scss/definitions/_button.scss
@@ -10,6 +10,9 @@
   text-align: center;
   cursor: pointer;
   background: none;
+  -webkit-appearance: none;
+  -webkit-border-radius:0;
+  border-radius:0;
 
   &:hover, &.active {
     background: $color-grey;
