--- a/src/scss/definitions/_font-alt.scss
+++ b/src/scss/definitions/_font-alt.scss
@@ -1,9 +1,13 @@
 
-%font-alt {
+%font-alt-plain {
   font-family: $font-family-alt;
   text-transform: uppercase;
-  font-size: $font-size-small;
   font-weight: bold;
-  color: $color-grey;
   letter-spacing: 1.2px;
+}
+
+%font-alt {
+  @extend %font-alt-plain;
+  font-size: $font-size-small;
+  color: $color-grey;
 }
