--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,3 +2,11 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/rainbow/1.2.0/js/rainbow.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/rainbow/1.2.0/js/language/html.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/rainbow/1.2.0/js/language/javascript.js"></script>
+<script type="text/javascript">
+  $(document).ready(function(){
+    $('.united-sidebar-toggler').click(function(){
+      $('.united-sidebar').toggleClass('open');
+      $(this).toggleClass('closed');
+    });
+  });
+</script>
