--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,11 +4,11 @@
 <body>
 {% include menu.html %}
 <div>
-  <a class="united-sidebar-toggler fixed top right" style="margin: 11px 6px;" href="#"><span>Toggle menu</span></a>
-  <div class="united-container">
-    <div class="united-br"></div>
-    <h1>{{ page.title }}</h1>
-    <div class="united-hr"></div>
+  <a class="sidebar-toggler fixed top right" style="margin: 11px 6px;" href="#"><span>Toggle menu</span></a>
+  <div class="container">
+    <div class="br"></div>
+    <h1 class="centered">{{ page.title }}</h1>
+    <div class="hr"></div>
     {{ page.content }}
   </div>
 </div>
