--- a/src/scss/definitions/_fixable.scss
+++ b/src/scss/definitions/_fixable.scss
@@ -1,45 +1,27 @@
 
 %fixable {
   &.fixed {
-    position: fixed;
+    @include position(fixed, 0 0 auto 0);
     z-index: 100;
-    top: 0;
-    right: 0;
-    bottom: auto;
-    left: 0;
 
     &.top {
-      top: 0;
-      right: 0;
-      bottom: auto;
-      left: 0;
-
+      @include position(null, 0 0 auto 0);
       &.left { bottom: auto; }
       &.right { bottom: auto; }
     }
 
     &.bottom {
-      top: auto;
-      right: 0;
-      bottom: 0;
-      left: 0;
-
+      @include position(null, auto 0 0 0);
       &.left { top: auto; }
       &.right { top: auto; }
     }
 
     &.right {
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: auto;
+      @include position(null, 0 0 0 auto);
     }
 
     &.left {
-      top: 0;
-      right: auto;
-      bottom: 0;
-      left: 0;
+      @include position(null, 0 auto 0 0);
     }
   }
 }
