--- a/src/scss/definitions/_box.scss
+++ b/src/scss/definitions/_box.scss
@@ -1,6 +1,7 @@
 
 %box {
-  background: $color-grey-light2;
-  border: 0 solid darken($color-grey-light2, 1%);
+  background: rgba(0,0,0,0.04);
+  @include colors(false, false, true);
   overflow: auto;
+  box-shadow: inset 0 0 0 2px rgba(0,0,0,0.02);
 }
