--- a/src/scss/definitions/_button.scss
+++ b/src/scss/definitions/_button.scss
@@ -1,8 +1,10 @@
 
 %button {
   display: inline-block;
-  border: 2px solid $color-grey;
-  color: $color-grey;
+  border: 2px solid map-get($colors, $color-main);
+  color: map-get($colors, $color-main);
+  @include colors(true, true, false);
+  @extend %font-alt-plain;
   line-height: $line-height-big;
   text-decoration: none;
   min-width: 150px;
@@ -14,25 +16,76 @@
   -webkit-border-radius:0;
   border-radius:0;
 
-  &:hover, &.active {
-    background: $color-grey;
+  &.full, &:hover, &.active {
+    background: map-get($colors, $color-main);
+    @include colors(false, true, true);
     color: white;
+  }
+
+  &.big {
+    line-height: $line-height-large;
+    min-width: 180px;
   }
 
   &.small {
     font-size: $font-size-small;
-    line-height: $line-height-big;
-    min-width: 100px;
+    min-width: 120px;
+    border-width: 1px;
   }
 
   &.mini {
-    @extend %font-alt-plain;
     font-size: $font-size-mini;
     min-width: 100px;
+    border-width: 1px;
+  }
+
+  &.rounded {
+    border-radius: 50px;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+
+  &.borderless {
+    border-width: 0;
+    padding: 2px 12px;
+    &.square-width {
+      padding-left: 0;
+      padding-right: 0;
+    }
+    &.rounded {
+      padding-left: 17px;
+      padding-right: 17px;
+      &.square-width {
+        padding-left: 0;
+        padding-right: 0;
+      }
+    }
+    &.small, &.mini {
+      border-width: 0;
+      padding: 1px 11px;
+      &.rounded {
+        padding-left: 16px;
+        padding-right: 16px;
+        &.square-width {
+          padding-left: 0;
+          padding-right: 0;
+        }
+      }
+    }
   }
 
   &.full-width {
     width: 100%;
+  }
+
+  &.square-width {
+    min-width: auto;
+    width: $size;
+    padding-left: 0;
+    padding-right: 0;
+    &.small { width: $size-small; }
+    &.mini { width: $size-mini; }
+    &.big { width: $size-big; }
   }
 
   &.auto-width {
@@ -60,19 +113,17 @@
       top: 0;
       bottom: 0;
     }
-  }
 
-  &.main { color: $color-main; border-color: $color-main; &:hover, &.active { background-color: $color-main; }}
-  &.positive { color: $color-positive; border-color: $color-positive; &:hover, &.active { background-color: $color-positive; }}
-  &.negative { color: $color-negative; border-color: $color-negative; &:hover, &.active { background-color: $color-negative; }}
-  &.grey { color: $color-grey; border-color: $color-grey; &:hover, &.active { background-color: $color-grey; }}
-  &.grey-dark { color: $color-grey-dark; border-color: $color-grey-dark; &:hover, &.active { background-color: $color-grey-dark; }}
-  &.grey-dark2 { color: $color-grey-dark2; border-color: $color-grey-dark2; &:hover, &.active { background-color: $color-grey-dark2; }}
-  &.gold { color: $color-gold; border-color: $color-gold; &:hover, &.active { background-color: $color-gold; } }
-
-  &.main, &.positive, &.negative, &.grey, &.grey-dark, &.grey-dark2, &.gold {
-    &:hover {
-      color: white;
+    &.rounded {
+      > .icon {
+        left: 15px;
+      }
+      &.icon-right {
+        > .icon {
+          left: auto;
+          right: 15px;
+        }
+      }
     }
   }
 }
