--- a/src/scss/elements/_navigation.scss
+++ b/src/scss/elements/_navigation.scss
@@ -1,17 +1,13 @@
 
-.united-navigation {
+#{$u-prefix}.navigation {
   padding: 5px 0;
   list-style: none;
-  @extend %box;
-  border-width: 2px;
-
   li {
     a {
       padding: 5px 20px;
       text-decoration: none;
       display: block;
       @include transition(color 0.2s ease-out);
-      color: $color-grey;
       position: relative;
 
       &:before {
@@ -25,7 +21,6 @@
           margin-top: -4px;
           left: 6px;
           border-radius: 10px;
-          background: $color-main;
           @include transition(opacity 0.2s ease-out);
         }
 
@@ -33,10 +28,6 @@
         &:before {
           opacity: 1;
         }
-      }
-
-      &.active, &:hover {
-        color: $color-grey-dark2;
       }
     }
   }
@@ -64,23 +55,11 @@
       }
     }
   }
-
-  &.icon-left, &.icon-right {
-    li {
-      a {
-        &.active, &:hover {
-          .icon {
-            color: $color-main;
-          }
-        }
-      }
-    }
-  }
 }
 
-.united-sidebar {
-  .united-navigation {
-    border-width: 0;
+#{$u-prefix}.sidebar {
+  #{$u-prefix}.navigation {
+    box-shadow: none;
     padding-right: 0;
   }
 }
