--- a/src/scss/modules/_sidebar.scss
+++ b/src/scss/modules/_sidebar.scss
@@ -1,7 +1,8 @@
 
-.united-sidebar {
+#{$u-prefix}.sidebar {
   @extend %box;
   @extend %fixable;
+  background: map-get($colors, 'grey-light2');
   width: 300px;
   padding: 20px;
   overflow: auto;
@@ -54,6 +55,11 @@
           margin-left: 300px;
           @include transition(margin-left 0.15s ease-out);
         }
+
+        &.closed {
+          left: -300px;
+          & + * { margin-left: 0; }
+        }
       }
 
       &.right {
@@ -64,6 +70,11 @@
           margin-right: 300px;
           @include transition(margin-right 0.15s ease-out);
         }
+
+        &.closed {
+          right: -300px;
+          & + * { margin-right: 0; }
+        }
       }
 
       &.top {
@@ -73,6 +84,11 @@
           margin-top: 300px;
           @include transition(margin-top 0.15s ease-out);
         }
+
+        &.closed {
+          top: -300px;
+          & + * { margin-top: 0; }
+        }
       }
 
       &.bottom {
@@ -81,6 +97,11 @@
         & + * {
           margin-bottom: 300px;
           @include transition(margin-bottom 0.15s ease-out);
+        }
+
+        &.closed {
+          bottom: -300px;
+          & + * { margin-bottom: 0; }
         }
       }
 
@@ -95,7 +116,7 @@
   }
 }
 
-.united-sidebar-toggler {
+#{$u-prefix}.sidebar-toggler {
 
   position: relative;
   display: inline-block;
@@ -117,7 +138,7 @@
     margin-bottom: 6px;
     display: inline-block;
     vertical-align: center;
-    background: $color-grey-dark2;
+    background: map-get($colors, $color-default);
     font-size: 0;
 
     &:before, &:after {
@@ -126,7 +147,7 @@
       content: "";
       height: 2px;
       width: 20px;
-      background: $color-grey-dark2;
+      background: map-get($colors, $color-default);
       top: -6px;
       left: 50%;
       margin-left: -10px;
@@ -146,7 +167,7 @@
       background: none;
 
       &:before, &:after {
-        background: $color-negative;
+        background: map-get($colors, 'red');
         margin-left: -8px;
       }
 
