--- a/src/scss/modules/_tabbar.scss
+++ b/src/scss/modules/_tabbar.scss
@@ -1,9 +1,7 @@
 
-.united-tabbar {
+#{$u-prefix}.tabbar {
   @extend %box;
   @extend %fixable;
-  border-bottom-width: 2px;
-
   &.bottom {
     border-top-width: 2px;
     border-bottom-width: 0;
@@ -23,7 +21,7 @@
         text-align: center;
         text-decoration: none;
         font-size: $font-size-small;
-        color: $color-grey-dark;
+        //color: $color-grey-dark;
         line-height: 100%;
         padding-bottom: 2px;
 
@@ -35,16 +33,16 @@
         }
 
         &:hover {
-          color: $color-grey-dark2;
+          //color: $color-grey-dark2;
         }
       }
 
       &.active {
         > * {
-          color: $color-grey-dark2;
+          //color: $color-grey-dark2;
           font-weight: bold;
           .icon {
-            color: $color-main;
+            //color: $color-main;
           }
         }
       }
@@ -52,7 +50,7 @@
   }
 }
 
-.united-tabbar-space {
+#{$u-prefix}.tabbar-space {
   display: block;
   clear: both;
   height: 50px;
