--- a/src/scss/elements/_form.scss
+++ b/src/scss/elements/_form.scss
@@ -1,6 +1,7 @@
 
 #{$u-prefix}.label {
   @extend %font-alt;
+  @include colors(true, false, false);
 }
 
 #{$u-prefix}.field {
@@ -17,13 +18,17 @@
 
   &.inline {
     @include display(flex);
+    @include align-items(flex-start);
 
     label, #{$u-prefix}.label {
       display: inline-block;
-      line-height: $line-height-big * 1.5;
-      padding: 0 10px;
+      line-height: $line-height-big;
+      padding: 4px 10px;
       vertical-align: middle;
       min-width: 100px;
+      &.auto-width {
+        min-width: 0;
+      }
     }
 
     &.labeled, &.overlayed {
@@ -32,6 +37,8 @@
         background: rgba(0,0,0,0.04);
         border: 1px solid map-get($colors, 'grey-light');
         border-right-width: 0;
+        padding-top: 3px;
+        padding-bottom: 3px;
       }
 
       > input + label, > input + #{$u-prefix}.label {
@@ -41,23 +48,33 @@
     }
 
     &.overlayed {
-      > input:not([type="submit"]):not([type="button"]):not([type="reset"]):not([type="checkbox"]):not([type="radio"]), > textarea {
-        border-right-width: 0;
-      }
       > label, > #{$u-prefix}.label {
         background: none;
-        border-left-width: 1px;
-        border-right-width: 0;
+        border: none;
+      }
+    }
 
-        + input:not([type="submit"]):not([type="button"]):not([type="reset"]):not([type="checkbox"]):not([type="radio"]), + textarea {
-          border-right-width: 1px;
-          border-left-width: 0;
+    &.overlayed {
+      > label, > #{$u-prefix}.label, > button, > input[type="submit"], > input[type="button"], > input[type="reset"], #{$u-prefix}.button {
+        position: absolute;
+        left: auto;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        min-width: $size;
+        padding: 0 3px;
+        text-align: center;
+        @include display(flex);
+        @include align-items(center);
+
+        > * {
+          font-size: $font-size;
+          @include flex(1);
         }
       }
 
-      > input + label, > input + #{$u-prefix}.label {
-        border-left-width: 0;
-        border-right-width: 1px;
+      > input:not([type="submit"]):not([type="button"]):not([type="reset"]):not([type="checkbox"]):not([type="radio"]) {
+          padding-right: $size;
       }
     }
 
@@ -81,10 +98,13 @@
 
       &[type="radio"] + label:before {
         border-radius: 20px;
+        background: map-get($colors, 'white');
+        box-shadow: inset 0 0 0 0 map-get($colors, $color-main);
       }
 
       &[type="radio"]:checked + label:before {
-        box-shadow: inset 0 0 0 4px map-get($colors, 'white');
+        box-shadow: inset 0 0 0 4px map-get($colors, $color-main);
+        border-color: map-get($colors, $color-main);
       }
 
       &[type="checkbox"]:checked + label:before {
@@ -93,7 +113,6 @@
     }
     label {
       padding-left: 25px;
-      line-height: $size;
 
       &:before {
         content: "";
@@ -103,7 +122,7 @@
         left: 0;
         margin-top: -8px;
         position: absolute;
-        @include transition(box-shadow 0.1s ease-out);
+        @include transition(all 0.05s ease-out);
         box-shadow: inset 0 0 0 10px map-get($colors, 'white');
         border: 1px solid map-get($colors, 'grey-light');
         background: map-get($colors, $color-main);
@@ -111,7 +130,15 @@
     }
   }
 
-  & + #{$u-prefix}.message {
+  &.rounded {
+    > input:not([type="submit"]):not([type="button"]):not([type="reset"]):not([type="checkbox"]):not([type="radio"]) {
+      border-radius: $size/2;
+      padding-left: 15px;
+      padding-right: 15px;
+    }
+  }
+
+  & + #{$u-prefix}.message, & + #{$u-prefix}.message.small {
     margin-top: -15px;
   }
 
