--- a/src/scss/elements/_message.scss
+++ b/src/scss/elements/_message.scss
@@ -1,21 +1,46 @@
 
 #{$u-prefix}.message {
-
+  margin: 20px 0;
   padding: 5px 10px;
-  //background: $color-grey-light2;
-  //border: 1px solid $color-grey-light;
+  background: map-get($colors, $color-main);
+  @include colors(false, true, true);
+  color: white;
   border-radius: 2px;
+  @include align-items(center);
+  @include display(flex);
+
+  &.justified {
+    @include justify-content(space-between);
+  }
+
+  > * {
+    margin-right: 10px;
+    &:last-child { margin-right: 0; }
+  }
 
   &.small {
+    margin: 10px 0;
     font-size: $font-size-small;
     padding: 3px 5px;
+
+    > * {
+      margin-right: 5px;
+      &:last-child { margin-right: 0; }
+    }
+
+    & + #{$u-prefix}.message {
+      margin-top: -5px;
+    }
   }
 
   &.basic {
-    //border-color: $color-grey-light2;
+    background: none;
+    border: 1px solid map-get($colors, $color-main);
+    color: map-get($colors, $color-main);
+    @include colors(true, true, false);
   }
 
-  & + .united-message {
+  & + #{$u-prefix}.message {
     margin-top: -10px;
   }
 }
