--- a/src/scss/definitions/_button.scss
+++ b/src/scss/definitions/_button.scss
@@ -8,7 +8,7 @@
   line-height: $line-height-big;
   text-decoration: none;
   min-width: 150px;
-  padding: 0 10px;
+  padding: 0 7px;
   text-align: center;
   cursor: pointer;
   background: none;
@@ -25,67 +25,46 @@
   &.big {
     line-height: $line-height-large;
     min-width: 180px;
+    padding: 0 8px;
   }
 
   &.small {
     font-size: $font-size-small;
     min-width: 120px;
     border-width: 1px;
+    padding: 0 6px;
   }
 
   &.mini {
     font-size: $font-size-mini;
     min-width: 100px;
     border-width: 1px;
+    padding: 0 5px;
   }
 
   &.rounded {
-    border-radius: 50px;
-    padding-left: 15px;
-    padding-right: 15px;
+    border-radius: 30px;
   }
 
   &.borderless {
     border-width: 0;
-    padding: 2px 12px;
-    &.square-width {
-      padding-left: 0;
-      padding-right: 0;
-    }
-    &.rounded {
-      padding-left: 17px;
-      padding-right: 17px;
-      &.square-width {
-        padding-left: 0;
-        padding-right: 0;
-      }
-    }
-    &.small, &.mini {
+    padding: 2px 9px;
+    &.small {
       border-width: 0;
-      padding: 1px 11px;
-      &.rounded {
-        padding-left: 16px;
-        padding-right: 16px;
-        &.square-width {
-          padding-left: 0;
-          padding-right: 0;
-        }
-      }
+      padding: 1px 7px;
+    }
+    &.mini {
+      border-width: 0;
+      padding: 1px 6px;
+    }
+    &.big {
+      border-width: 0;
+      padding: 2px 10px;
     }
   }
 
   &.full-width {
     width: 100%;
-  }
-
-  &.square-width {
-    min-width: auto;
-    width: $size;
-    padding-left: 0;
-    padding-right: 0;
-    &.small { width: $size-small; }
-    &.mini { width: $size-mini; }
-    &.big { width: $size-big; }
   }
 
   &.auto-width {
@@ -94,34 +73,69 @@
   }
 
   &.icon-left, &.icon-right {
-    padding-left: 30px;
+    padding-left: 26px;
     position: relative;
 
     &.icon-right {
       padding-left: 10px;
-      padding-right: 30px;
+      padding-right: 26px;
 
-      > .icon {
+      #{$u-prefix}.icon {
         left: auto;
         right: 10px;
       }
     }
 
-    > .icon {
+    #{$u-prefix}.icon {
       position: absolute;
+      height: 100%;
+      margin: 0;
       left: 10px;
       top: 0;
       bottom: 0;
     }
 
-    &.rounded {
-      > .icon {
-        left: 15px;
+    &.mini {
+      padding-left: 22px;
+      #{$u-prefix}.icon {
+        left: 6px;
       }
       &.icon-right {
-        > .icon {
+        padding-left: 10px;
+        padding-right: 22px;
+        #{$u-prefix}.icon {
           left: auto;
-          right: 15px;
+          right: 6px;
+        }
+      }
+    }
+
+    &.small {
+      padding-left: 24px;
+      #{$u-prefix}.icon {
+        left: 8px;
+      }
+      &.icon-right {
+        padding-left: 10px;
+        padding-right: 24px;
+        #{$u-prefix}.icon {
+          left: auto;
+          right: 8px;
+        }
+      }
+    }
+
+    &.big {
+      padding-left: 28px;
+      #{$u-prefix}.icon {
+        left: 12px;
+      }
+      &.icon-right {
+        padding-left: 10px;
+        padding-right: 28px;
+        #{$u-prefix}.icon {
+          left: auto;
+          right: 12px;
         }
       }
     }
