--- a/src/scss/modules/_tabbar.scss
+++ b/src/scss/modules/_tabbar.scss
@@ -21,29 +21,13 @@
         text-align: center;
         text-decoration: none;
         font-size: $font-size-small;
-        //color: $color-grey-dark;
         line-height: 100%;
         padding-bottom: 2px;
+        @include colors(true);
 
         .icon {
           display: block;
-          font-size: $font-size * 2;
-          margin-bottom: 2px;
-          margin-top: 4px;
-        }
-
-        &:hover {
-          //color: $color-grey-dark2;
-        }
-      }
-
-      &.active {
-        > * {
-          //color: $color-grey-dark2;
-          font-weight: bold;
-          .icon {
-            //color: $color-main;
-          }
+          margin: 4px auto;
         }
       }
     }
